--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
     "name": "MealsProject",
     "slug": "MealsProject",
     "version": "1.0.0",
-    "orientation": "portrait",
+    "orientation": "default",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "backgroundColor":"#4B4237",
